feat[#14] : 명언 등록하기 기능 추가
