# docs/swagger.json
@@ -172,6 +172,57 @@
                     }
                 }
             }
+        },
+        "/wise-sayings": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "관리자 계정으로 명언을 추가합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WiseSayings"
+                ],
+                "summary": "명언 추가",
+                "parameters": [
+                    {
+                        "description": "명언 추가 요청 객체",
+                        "name": "wiseSayingDto.wiseSaying",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/wisesaying.AddWiseSayingRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/custom.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/custom.Fail400GetResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/custom.Fail500GetResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -308,6 +359,25 @@
                 "status_code": {
                     "type": "integer",
                     "example": 200
+                }
+            }
+        },
+        "wisesaying.AddWiseSayingRequest": {
+            "type": "object",
+            "required": [
+                "nickname",
+                "password",
+                "wiseSaying"
+            ],
+            "properties": {
+                "nickname": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "wiseSaying": {
+                    "type": "string"
                 }
             }
         }
