# router/wise_saying_router.go
@@ -2,6 +2,9 @@ package router
 
 import (
 	"geulSsi/app/controller"
+	"geulSsi/app/repository"
+	"geulSsi/app/service"
+	"geulSsi/config/db"
 	"github.com/gin-gonic/gin"
 )
 
@@ -10,10 +13,16 @@ func InitWiseSayingRouter(g *gin.Engine) {
 	{
 		wiseSaying := wiseSayingDependency()
 		v1.GET("/events", wiseSaying.PushWiseSaying)
+		v1.POST("", wiseSaying.AddWiseSaying)
 
 	}
 }
 
 func wiseSayingDependency() controller.WiseSayingController {
-	return controller.NewWiseSayingController()
+	return controller.NewWiseSayingController(
+		service.NewWiseSayingService(
+			repository.NewUserRepository(*db.MySQL),
+			repository.NewWiseSayingRepository(*db.MySQL),
+		),
+	)
 }
